[package]
name = "mcp-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared core for the adelie-ai hand-rolled MCP servers: JSON-RPC 2.0 protocol/dispatch, stdio/websocket/unix transports, and a standard Clap CLI with a per-server extension hook."
repository = "https://github.com/adelie-ai/mcp-core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = [
    "io-std",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "sync",
] }
# WebSocket transport (optional — disable default features to drop axum entirely).
axum = { version = "0.8", features = ["ws"], optional = true }
futures-util = { version = "0.3", optional = true }
# auth (optional) — websocket Bearer-token validation: HS256 shared secret, or
# asymmetric JWT via a JWKS document / OIDC discovery.
jsonwebtoken = { version = "10", default-features = false, features = [
    "rust_crypto",
], optional = true }
jwtk = { version = "0.5", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[features]
# Stdio + unix are free (no extra crates), so they're on by default. The
# websocket transport pulls in axum, so it is strictly opt-in — most MCP servers
# only ever speak stdio. Enable it per-server with `features = ["websocket"]`.
default = ["unix"]
websocket = ["dep:axum", "dep:futures-util"]
# Websocket Bearer-token authentication. Implies `websocket`; adds the JWT/JWKS
# crates. A server enables it with `features = ["auth"]` and a non-`None`
# `ServerConfig::websocket_auth`.
auth = ["websocket", "dep:jsonwebtoken", "dep:jwtk", "dep:reqwest"]
# Unix-domain-socket transport. Uses tokio's net (already a dependency), so this
# feature only gates the code, not extra crates.
unix = []

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
